<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/general_padding"
                tools:context=".ui.home.fragment.HomeFragment">

    <EditText android:id="@+id/fragment_home_et_city"
              android:layout_width="match_parent"
              android:layout_alignParentTop="true"
              android:hint="@string/city_name"
              android:layout_toLeftOf="@+id/fragment_home_button_search"
              android:layout_height="wrap_content"/>

    <Button android:id="@+id/fragment_home_button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/search"/>

    <TextView android:id="@+id/fragment_home_tv_current_weather"
              android:layout_below="@+id/fragment_home_et_city"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>


    <ProgressBar
            android:id="@+id/fragment_home_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"/>


    <LinearLayout android:id="@+id/fragment_home_layout_error"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_centerInParent="true"
                  android:gravity="center_horizontal"
                  android:visibility="gone"
                  android:orientation="vertical">
        <TextView
                android:id="@+id/fragment_home_tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <Button android:id="@+id/fragment_home_button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/retry"
                android:layout_marginTop="@dimen/general_space"
                android:padding="@dimen/general_padding"/>

    </LinearLayout>

</RelativeLayout>